--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>erhii</title>
 
+  <script>
+    console.log("Đây là một dòng log thông thường.");
+    console.info("Đây là thông tin (info).");
+    console.warn("Đây là cảnh báo (warning).");
+    console.error("Đây là lỗi (error).");
+  </script>
+
   <script defer src="chunk-vendors.11a54240.js"></script>
   <script defer src="app.4645aab8.js"></script>
 </head>
