--- a/index.html
+++ b/index.html
@@ -62,17 +62,9 @@
         writeToScreen("info", args);
       };
     })();
-
-    // Ví dụ log thử
-    console.log("🟢 Log thường");
-    console.info("ℹ️ Thông tin");
-    console.warn("⚠️ Cảnh báo");
-    console.error("❌ Lỗi");
   </script>
-
-  
   <script defer src="chunk-vendors.11a54240.js"></script>
-  <script defer src="app.4645aab8.js"></script>
+  <script defer src="app.4645aab8.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
