--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 
   
   <script defer src="chunk-vendors.11a54240.js"></script>
-  <script defer src="app.4645aab8.min.js"></script>
+  <script defer src="app.4645aab8.js"></script>
 </body>
 </html>
